fixed sidebar height issue on small height screen

--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -1,9 +1,9 @@
 .layout-wrapper {
   display: flex;
-  height: 100%;
+  min-height: 100%;
 
   &.has-page-title {
-    height: calc(100% - 50px);
+    min-height: calc(100% - 50px);
   }
 }
 
@@ -15,7 +15,7 @@
   padding: 15px;
   left: -250px;
   transition: left 0.3s ease;
-  height: 100%;
+  min-height: 100%;
   z-index: 100;
   background: map-get($colors, 'primary-color');
   color:  map-get($colors, 'primary-color-text');
@@ -24,7 +24,7 @@
     width: 100%;
   }
    @media(min-width: map-get($layout, 'desktop' )) {
-    height: 100%;
+    min-height: 100%;
     left: 0;
     position: relative;
   }
